WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47134
[GTK] Form controls do not respect GTK+ font size
https://bugs.webkit.org/show_bug.cgi?id=47134
Summary
[GTK] Form controls do not respect GTK+ font size
Martin Robinson
Reported
2010-10-04 16:57:49 PDT
The size seems to be much larger than expected based on my GTK+ theme settings.
Attachments
Patch for this issue
(57.81 KB, patch)
2010-10-08 11:14 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2010-10-08 11:14:54 PDT
Created
attachment 70270
[details]
Patch for this issue
Ryuan Choi
Comment 2
2010-10-12 17:09:02 PDT
***
Bug 47536
has been marked as a duplicate of this bug. ***
Xan Lopez
Comment 3
2010-10-13 09:34:55 PDT
Comment on
attachment 70270
[details]
Patch for this issue OK. Per conversation in jabber: - Might make sense to share the DPI code with the WebView. - Nitpick about size = size * ...
Eric Seidel (no email)
Comment 4
2010-10-13 12:28:15 PDT
Attachment 70270
[details]
was posted by a committer and has review+, assigning to Martin Robinson for commit.
Martin Robinson
Comment 5
2010-10-13 12:39:49 PDT
I will land this when the fix for 47033 lands as well.
Martin Robinson
Comment 6
2010-10-14 16:18:36 PDT
Committed
r69818
: <
http://trac.webkit.org/changeset/69818
>
Alejandro G. Castro
Comment 7
2010-10-15 02:07:25 PDT
This patch fixed the problem when rendering non existent plugins, but apparently it caused problems with some tests: fast/forms/mailto/advanced-get.html -> failed fast/forms/mailto/advanced-put.html -> failed
Martin Robinson
Comment 8
2010-10-15 08:35:47 PDT
The issue seems to be that the content of the page is not the same physical size as the other ports. An extra newline, for instance, may produce dumpAsText differences like this. I've committed new baselines.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug