2010-10-08  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Xan Lopez.

        [GTK] Form controls do not respect GTK+ font size
        https://bugs.webkit.org/show_bug.cgi?id=47134

        Rebaseline tests which depend on form control font size.

        * platform/gtk/editing/pasteboard/drop-text-without-selection-expected.txt:
        * platform/gtk/editing/selection/drag-select-1-expected.txt:
        * platform/gtk/editing/selection/drag-text-delay-expected.txt:
        * platform/gtk/editing/selection/select-box-expected.txt:
        * platform/gtk/fast/css/input-search-padding-expected.txt:
        * platform/gtk/fast/css/text-input-with-webkit-border-radius-expected.txt:
        * platform/gtk/fast/events/keydown-1-expected.txt:
        * platform/gtk/fast/forms/box-shadow-override-expected.txt:
        * platform/gtk/fast/forms/button-style-color-expected.txt:
        * platform/gtk/fast/forms/input-button-sizes-expected.txt:
        * platform/gtk/fast/forms/input-text-drag-down-expected.txt:
        * platform/gtk/fast/forms/placeholder-stripped-expected.txt:
        * platform/gtk/fast/frames/take-focus-from-iframe-expected.txt:
        * platform/gtk/fast/text/backslash-to-yen-sign-euc-expected.txt:
        * platform/gtk/transforms/2d/zoom-menulist-expected.txt:
2010-10-08  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] Form controls do not respect GTK+ font size
        https://bugs.webkit.org/show_bug.cgi?id=47134

        Have form controls use the font specified in GtkSettings. This font is
        the default control font in GTK+ applications and Firefox. We need to
        pass the string through Pango to get a valid font name and size.

        * platform/gtk/RenderThemeGtk.cpp:
        (WebCore::getScreenDPI): A helper function which returns
        the DPI of the default screen or 96 as a fallback.
        (WebCore::RenderThemeGtk::systemFont): Calculate the system font
        by looking at the GtkSettings value and pushing it through Pango
        to get the font family and font size.
2010-10-08  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] Form controls do not respect GTK+ font size
        https://bugs.webkit.org/show_bug.cgi?id=47134

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (initializeGtkFontSettings): Initialize the font control size when running
        DumpRenderTree to a standard value.

Canonical link: https://commits.webkit.org/60400@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69818 268f45cc-cd09-0410-ab3c-d52691b4dbfc